# manipulation_project

moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place.launch.py
moveit2_scripts/src/: pick_and_place.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: kinematics.yaml  name.srdf  ros2_controllers.yaml
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  name.srdf
real_moveit_config/launch/: move_group.launch.py
